# mediquery-ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  backend.Dockerfile  biome.json  convert_sql.py  docker-compose.test.yml  docker-compose.yml  docker-start.sh  migrator.Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  run-docker-parity-gate.sh  run-e2e.sh
.github/workflows/: ci.yml  e2e.yml  (+1 more)
backend/: .prettierrc  Dockerfile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.e2e.ts  vitest.config.ts
data-pipeline/: README.md  config.py  docker-compose.yml  generate_synthea.sh  load_omop.py  main.py  pyproject.toml
data-pipeline/alembic/: env.py
data-pipeline/alembic/versions/: 85ed5f4bc36d_init_omop_schemas.py
data-pipeline/scripts/: export_gold.py  run_full_pipeline.py
data-pipeline/synthea/: Dockerfile
data-pipeline/tests/: conftest.py  test_load_profile.py  test_mapping.py  test_qa_data_structures.py  test_required_concepts.py  test_validators.py
data-pipeline/vocabulary/: __init__.py  load_profile.py  mapping.py  qa_checks.py  required_concepts.py  validators.py
docs/: README.md
frontend/: .gitignore  .prettierrc.json  CHANGELOG.md  Dockerfile  README.md  eslint.config.mjs  index.html  nginx.conf  package.json  playwright-e2e.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
tmp/: debug_queries.sh  query.sql  run_curl_battery.py  run_curl_battery.sh
(+241 files in other folders)
